--- a/flannel/Dockerfile
+++ b/flannel/Dockerfile
@@ -1,4 +1,5 @@
-FROM quay.io/coreos/flannel:v0.9.1-amd64
+#FROM quay.io/coreos/flannel:v0.9.1-amd64
+FROM quay.io/coreos/flannel:v0.10.0-amd64
 MAINTAINER Mosaicwang <mosaicwang@gmail.com>
 
 
